- Improved error handling. PlayerDataRetrievalException now produces status code of 503 - Improved thymeleaf templating and better reuse of fragments - improved consistency on properties naming for application.properties file - Added code to disable Generate Squad button on submit of form.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-#Set to true when you want to integrate with a player service api
-squadgenerator.useplayerapi=false
-
 #Set the player service api URL and endpoint
+player.api.enable=false
 player.api.url=http://localhost:8081
 player.api.endpoint=/getPlayers
